[package]
name = "tower"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
publish = false
description = """
Tower is a library of modular and reusable components for building robust
clients and servers.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "non-blocking", "futures", "service"]

[dependencies]
futures = "0.1"
tower-service = { version = "0.2", path = "tower-service" }
tower-reconnect = { version = "0.1", path = "tower-reconnect" }
tower-middleware = { version = "0.1", path = "tower-middleware" }
tower-util = { version = "0.1", path = "tower-util" }

[dev-dependencies]
tower-in-flight-limit = { version = "0.1", path = "tower-in-flight-limit" }
tower-rate-limit = { version = "0.1", path = "tower-rate-limit" }
tower-retry = { version = "0.1", path = "tower-retry" }
tower-buffer = { version = "0.1", path = "tower-buffer" }
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tokio = "0.1"
hyper = "0.12"
http = "0.1"
log = "0.4.1"
env_logger = { version = "0.5.3", default-features = false }
tokio-timer = "0.1"
futures-cpupool = "0.1"

[workspace]

members = [
  "./",
  "tower-balance",
  "tower-buffer",
  "tower-discover",
  "tower-filter",
  "tower-in-flight-limit",
  "tower-mock",
  "tower-middleware",
  "tower-rate-limit",
  "tower-reconnect",
  "tower-retry",
  "tower-service",
  "tower-timeout",
  "tower-util",
  "tower-watch",
]

[patch.'https://github.com/tower-rs/tower']
tower-service = { path = "../tower/tower-service" }
tower-retry = { path = "../tower/tower-retry" }
tower-middleware = { path = "../tower/tower-middleware" }
tower-util = { path = "../tower/tower-util" }